Fixed bug where right column of aliens wouldn't stay aligned. Added game over screen that displays the high score, current score, and a button to restart the game.

--- a/space.css
+++ b/space.css
@@ -6,3 +6,13 @@ body {
 #board {
     background-color: black;
 }
+
+#restartButton {
+    position: absolute;
+    top: 59%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 10px 20px;
+    font-size: 16px;
+    display: none; /* Hide the button initially */
+}
